language/move-lang/tests/move_check/parser/expr_return_braces.exp
error: 

   ┌── tests/move_check/parser/expr_return_braces.move:4:16 ───
   │
 4 │         return if (v > 10) 10 else v
   │                ^^ Unexpected token: 'if'
   ·
 4 │         return if (v > 10) 10 else v
   │                -- Expected: 'move', 'copy', 'break', 'continue', '[Name]', '[Name<Types>]', '[Address]', 'true', 'false', '[U64]', '(', '{', '::'
   │

